--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,7 @@
     "# Use Python's dir(obj) to get a list of all attributes of SparkContext\n",
     "\n",
     "# Code here \n",
-    "\n"
+    "dir(sc)\n"
    ]
   },
   {
