Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "# Use Python's help ( help(object) ) function to get information on attributes and methods for sc object. \n",
     "\n",
-    "\n",
+    "help(sc)\n",
     "# Code here \n"
    ]
   },
