Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,13 +184,13 @@
    "outputs": [],
    "source": [
     "# Check the number of cores being used\n",
-    "\n",
+    "sc.version\n",
     "# Code here \n",
     "\n",
     "# Check for the current version of Spark\n",
     "\n",
     "# Code here \n",
-    "\n",
+    "sc.defaultParallelism\n",
     "\n",
     "\n",
     "# Default number of cores being used: 2\n",
