Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "# Check the name of application currently running in spark environment\n",
-    "\n",
+    "sc.appName\n",
     "\n",
     "# Code here \n",
     "\n",
