Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
     " # Get all configuration settings\n",
     "\n",
     "# Code here \n",
-    "\n",
+    "_conf.getAll()\n",
     "# [('spark.driver.port', '36035'),\n",
     "#  ('spark.rdd.compress', 'True'),\n",
     "#  ('spark.driver.host', '588b1d2e9e9b'),\n",
