Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,6 +260,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[('spark.rdd.compress', 'True'),\n",
+    " ('spark.serializer.objectStreamReset', '100'),\n",
+    " ('spark.master', 'local[*]'),\n",
+    " ('spark.executor.id', 'driver'),\n",
+    " ('spark.submit.deployMode', 'client'),\n",
+    " ('spark.app.id', 'local-1561991900756'),\n",
+    " ('spark.ui.showConsoleProgress', 'true'),\n",
+    " ('spark.app.name', 'pyspark-shell'),\n",
+    " ('spark.driver.port', '45115'),\n",
+    " ('spark.driver.host', '567f506a2b06')]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
