--- a/index.ipynb
+++ b/index.ipynb
@@ -265,16 +265,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[('spark.rdd.compress', 'True'),\n",
-    " ('spark.serializer.objectStreamReset', '100'),\n",
-    " ('spark.master', 'local[*]'),\n",
-    " ('spark.executor.id', 'driver'),\n",
-    " ('spark.submit.deployMode', 'client'),\n",
-    " ('spark.app.id', 'local-1561991900756'),\n",
-    " ('spark.ui.showConsoleProgress', 'true'),\n",
-    " ('spark.app.name', 'pyspark-shell'),\n",
-    " ('spark.driver.port', '45115'),\n",
-    " ('spark.driver.host', '567f506a2b06')]"
+    "#[('spark.rdd.compress', 'True'),\n",
+    "#('spark.serializer.objectStreamReset', '100'),\n",
+    "#('spark.master', 'local[*]'),\n",
+    "('spark.executor.id', 'driver'),\n",
+    "('spark.submit.deployMode', 'client'),\n",
+    "('spark.app.id', 'local-1561991900756'),\n",
+    "('spark.ui.showConsoleProgress', 'true'),\n",
+    "('spark.app.name', 'pyspark-shell'),\n",
+    "('spark.driver.port', '45115'),\n",
+    "('spark.driver.host', '567f506a2b06')]"
    ]
   },
   {
