Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "outputs": [],
    "source": [
     "#Shut down SparkContext\n",
-    "\n",
+    "sc.stop()\n",
     "# Code here"
    ]
   },
